<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_patient_picture"
        android:layout_width="91dp"
        android:layout_height="84dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/user_name"
        app:layout_constraintBottom_toBottomOf="@+id/tv_patient_hospital"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/patient_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_patient_birtdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@+id/iv_patient_picture"
        app:layout_constraintTop_toTopOf="@+id/iv_patient_picture"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_patient_birtdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_nasc_1970_01_01_idade_51"
        app:layout_constraintBottom_toTopOf="@+id/tv_patient_sexo"
        app:layout_constraintEnd_toEndOf="@+id/tv_patient_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_patient_name" />

    <TextView
        android:id="@+id/tv_patient_sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo_m"
        app:layout_constraintBottom_toTopOf="@+id/tv_patient_hospital"
        app:layout_constraintStart_toStartOf="@+id/tv_patient_birtdate" />

    <TextView
        android:id="@+id/tv_patient_hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_hospital_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_patient_birtdate" />
</androidx.constraintlayout.widget.ConstraintLayout>
